[gd_scene load_steps=20 format=3 uid="uid://b28oq6xci348s"]

[ext_resource type="Script" path="res://items/bed.gd" id="1_bt6th"]
[ext_resource type="Texture2D" uid="uid://beojd28hpg3np" path="res://assets/art/items/bed.png" id="2_coi3r"]
[ext_resource type="Texture2D" uid="uid://8ki5wcq4i42r" path="res://assets/art/items/teleport.png" id="3_h7rw1"]
[ext_resource type="Texture2D" uid="uid://bbs8vhyo7h4tc" path="res://assets/art/items/teleport_2.png" id="4_crya8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hb7g"]
size = Vector2(20, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0bsi"]
atlas = ExtResource("3_h7rw1")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ixr8"]
atlas = ExtResource("3_h7rw1")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_061gq"]
atlas = ExtResource("3_h7rw1")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad3ek"]
atlas = ExtResource("3_h7rw1")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_grh4j"]
atlas = ExtResource("3_h7rw1")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_og60r"]
atlas = ExtResource("3_h7rw1")
region = Rect2(160, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r8hi8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0bsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ixr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_061gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad3ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grh4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og60r")
}],
"loop": true,
"name": &"animate",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_o0nv7"]
atlas = ExtResource("4_crya8")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1ut8"]
atlas = ExtResource("4_crya8")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7cgm"]
atlas = ExtResource("4_crya8")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b71ck"]
atlas = ExtResource("4_crya8")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iowdn"]
atlas = ExtResource("4_crya8")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ir6t"]
atlas = ExtResource("4_crya8")
region = Rect2(160, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cl6yv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0nv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1ut8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7cgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b71ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iowdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ir6t")
}],
"loop": true,
"name": &"animate",
"speed": 12.0
}]

[node name="bed" type="Area2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_bt6th")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.38419e-06, -6.99999)
rotation = -3.14159
shape = SubResource("RectangleShape2D_5hb7g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_coi3r")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="reset_timer" type="Timer" parent="."]

[node name="teleporter" type="Node2D" parent="."]
position = Vector2(0, -48)
rotation = 3.14159

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="teleporter"]
z_index = 1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_r8hi8")
animation = &"animate"
autoplay = "animate"
frame_progress = 0.834862

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="teleporter"]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_cl6yv")
animation = &"animate"
autoplay = "animate"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]
